[gd_scene load_steps=5 format=3 uid="uid://1nk6xbubg0un"]

[ext_resource type="Script" uid="uid://b5gv5cyrlc52u" path="res://scripts/win.gd" id="1_xtqdr"]
[ext_resource type="Texture2D" uid="uid://b1h0mantntupu" path="res://theme/Screenshot 2025-08-24 063542.png" id="2_yhty7"]
[ext_resource type="Theme" uid="uid://j6wtxxl2c81j" path="res://theme/game_theme.tres" id="3_8bwj2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ucn2p"]
bg_color = Color(0.239216, 0.733333, 0.890196, 1)

[node name="CanvasLayer" type="CanvasLayer"]

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_yhty7")
script = ExtResource("1_xtqdr")

[node name="TitleOverlay" type="CenterContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -416.0
offset_top = -33.5
offset_right = 416.0
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="TitleOverlay"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 4
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxFlat_ucn2p")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_8bwj2")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="playButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "RESTART"

[node name="ExitButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = " Exit "

[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/playButton" to="TextureRect" method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ExitButton" to="TextureRect" method="_on_exit_button_pressed"]
